--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   auto_size_text: ^3.0.0
   google_sign_in: ^6.1.4
   firebase_auth: ^4.7.1
+  visibility_detector: ^0.4.0+2
+  pie_chart: ^5.3.2
 
 dependency_overrides:
   intl: ^0.17.0
