--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   firebase_auth: ^4.7.1
   visibility_detector: ^0.4.0+2
   pie_chart: ^5.3.2
+  fl_chart: ^0.63.0
 
 dependency_overrides:
   intl: ^0.17.0
