--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   visibility_detector: ^0.4.0+2
   pie_chart: ^5.3.2
   fl_chart: ^0.63.0
+  shared_preferences: ^2.2.2
 
 dependency_overrides:
   intl: ^0.17.0
