--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,8 @@
 {
   "projects": {
-    "default": "dedeowner-7baee",
-    "build/web": "dedeowner-a6cbd"
+    "default": "dedeowner-a6cbd",
+    "build/web": "dedeowner-a6cbd",
+    "staging": "dedeowner-a6cbd"
   },
   "targets": {},
   "etags": {}
