add google sign in

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "default": "dedeowner-7baee",
+    "default": "dedeowner-a6cbd",
     "build/web": "dedeowner-a6cbd"
   },
   "targets": {},
