--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:690847738696:ios:d358c3c655e84c7051217d",
-  "FIREBASE_PROJECT_ID": "dedeowner-7baee",
-  "GCM_SENDER_ID": "690847738696"
+  "GOOGLE_APP_ID": "1:662224915108:ios:4573e2a62c86cda3263431",
+  "FIREBASE_PROJECT_ID": "dedeowner-a6cbd",
+  "GCM_SENDER_ID": "662224915108"
 }
