--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,12 +49,13 @@ dependencies:
   loader_overlay: ^2.3.0
   equatable: ^2.0.5
   auto_size_text: ^3.0.0
-  google_sign_in: ^6.1.4
+  google_sign_in: ^6.2.1
   firebase_auth: ^4.7.1
   visibility_detector: ^0.4.0+2
   pie_chart: ^5.3.2
   fl_chart: ^0.63.0
   shared_preferences: ^2.2.2
+  firebase_core: ^2.25.4
 
 dependency_overrides:
   intl: ^0.17.0
